--- a/04-BOOTSTRAP/09-instalando-bootstrap/package.json
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass ./styles/sass:./styles/css"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^5.2.2"
+  }
 }
