--- a/06-DOM-Javascript/60-travel-agency-app/package.json
+++ b/06-DOM-Javascript/60-travel-agency-app/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.10.2"
+    "bootstrap-icons": "^1.10.2",
+    "sass": "^1.56.1"
   }
 }
