--- a/09-NODEJS/servers/TiendaOnline/package.json
+++ b/09-NODEJS/servers/TiendaOnline/package.json
@@ -8,12 +8,18 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
